Wordpress/production/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
  namespace: production
spec:
  selector:
    app: wordpress
  ports:
    - name: wordpress-port
      port: 80
      targetPort: 80
      protocol: TCP
  type: LoadBalancer
